--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,14 +17,9 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
   font-family: "lexend" !important;
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: black;
+  color:white;
 }
 
 @layer utilities {
