--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,32 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  height: 0;
+  background-color: #fff8;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #2225; /* Change the background color */
+}
+
+/* Customize scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #222; /* Change the color of the scrollbar thumb */
+  border-radius: 10px; /* Round the corners of the thumb */
+}
+
+/* Customize scrollbar corner */
+::-webkit-scrollbar-corner {
+  background-color: #fff; /* Change the color of the scrollbar corner */
+}
+
+/* Customize scrollbar button */
+::-webkit-scrollbar-button {
+  display: none; /* Hide scrollbar buttons */
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
