--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,22 +11,22 @@
 ::-webkit-scrollbar {
   width: 5px;
   height: 0;
-  background-color: #fff8;
+  background-color: #fff0;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #2225; /* Change the background color */
+  background-color: #2220; /* Change the background color */
 }
 
 /* Customize scrollbar thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #222; /* Change the color of the scrollbar thumb */
+  background-color: #2220; /* Change the color of the scrollbar thumb */
   border-radius: 10px; /* Round the corners of the thumb */
 }
 
 /* Customize scrollbar corner */
 ::-webkit-scrollbar-corner {
-  background-color: #fff; /* Change the color of the scrollbar corner */
+  background-color: #fff0; /* Change the color of the scrollbar corner */
 }
 
 /* Customize scrollbar button */
