fix: write post design

--- a/src/components/input/ReactQuill/style.css
+++ b/src/components/input/ReactQuill/style.css
@@ -7,6 +7,11 @@
     padding: 0px!important;
     padding-bottom: 8px!important;
     padding-top: 4px!important;
+    width: fit-content;
+    position: absolute;
+    right: -20px;
+    top: 3px;
+    z-index: 10;
 }
 
 .ql-fill {
@@ -31,7 +36,34 @@
 }
 
 .ql-editor{
-    padding-left:0px!important;
-    padding-right:0px!important;
-    padding-top:4px!important;
+    padding:0px;
+}
+
+.ql-editor img{
+    width:100px!important;
+    cursor: pointer;
+}
+
+.ql-image{
+    opacity: 50%;
+}
+
+.ql-image:hover{
+    opacity: 100%;
+}
+
+.ql-color{
+    opacity: 50%;
+}
+
+.ql-color:hover{
+    opacity: 100%;
+}
+
+.ql-link{
+    opacity: 50%;
+}
+
+.ql-link:hover{
+    opacity: 100%;
 }
