--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,8 +67,8 @@ div {
 }
 
 #blog-view img{
-  width: 300px;
-  height: 250px;
+  max-width: 300px;
+  max-height: 250px;
   object-fit: contain;
   background-color: #fff1;
   border-radius: 20px;
