--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,8 +67,9 @@ div {
 }
 
 #blog-view img{
-  max-width: 300px;
-  max-height: 250px;
+  max-width: 400px;
+  max-height: 600px;
+  width:fit-content;
   object-fit: contain;
   background-color: #fff1;
   border-radius: 20px;
