--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,7 +45,7 @@
 body {
   font-family: "lexend" !important;
   background: black;
-  color:white;
+  color: white;
 }
 
 @layer utilities {
@@ -55,30 +55,48 @@ body {
 }
 
 @font-face {
-  font-family: 'lexend';
-  src: url('/fonts/Lexend-VariableFont_wght.ttf') format('truetype'); /* Modern Browsers */
+  font-family: "lexend";
+  src: url("/fonts/Lexend-VariableFont_wght.ttf") format("truetype"); /* Modern Browsers */
   /* Add more src lines for different font file formats if needed */
   font-weight: normal;
   font-style: normal;
 }
 
 div {
-  font-size:small;
+  font-size: small;
 }
 
-#blog-view img{
+#blog-view img {
   max-width: 400px;
   max-height: 600px;
-  width:fit-content;
+  width: fit-content;
   object-fit: contain;
   background-color: #fff1;
   border-radius: 20px;
-  margin-top:10px;
-  margin-bottom:10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .scale-in {
   animation: scaleAnimation 0.5s ease-in-out forwards;
+}
+
+.image-container {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: black;
+  width: 22px;
+  height: 23px;
+  border-radius: 20px;
+  border: 2px solid white;
+  text-align: center;
 }
 
 @keyframes scaleAnimation {
